--- a/package.json
+++ b/package.json
@@ -4,25 +4,25 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.3",
+    "@mui/lab": "^5.0.0-alpha.85",
+    "@mui/material": "^5.8.6",
+    "@mui/x-data-grid": "^6.6.0",
     "@refinedev/cli": "^2.7.4",
     "@refinedev/core": "^4.28.2",
     "@refinedev/devtools": "^1.1.6",
     "@refinedev/inferencer": "^4.3.2",
     "@refinedev/kbar": "^1.1.2",
+    "@refinedev/mui": "^5.0.0",
+    "@refinedev/react-hook-form": "^4.8.10",
+    "@refinedev/react-router-v6": "^4.1.0",
+    "@refinedev/simple-rest": "^4.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.8.1",
-    "@refinedev/simple-rest": "^4.0.0",
-    "@refinedev/mui": "^5.0.0",
-    "@refinedev/react-hook-form": "^4.1.2",
-    "@mui/icons-material": "^5.8.3",
-    "@emotion/react": "^11.8.2",
-    "@emotion/styled": "^11.8.1",
-    "@mui/lab": "^5.0.0-alpha.85",
-    "@mui/material": "^5.8.6",
-    "@mui/x-data-grid": "^6.6.0",
-    "react-hook-form": "^7.30.0",
-    "@refinedev/react-router-v6": "^4.1.0"
+    "react-hook-form": "^7.47.0",
+    "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
     "@types/node": "^18.16.2",
